added some stuff

--- a/experiments/validation/Main.ipynb
+++ b/experiments/validation/Main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "Catalog('catalog')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keywords_to_avoid = ['not','anyOf','oneOf','allOf','patternPropreties']\n",
+    "# keywords_to_avoid = ['not','anyOf','oneOf','allOf','patterns','patternPropreties']\n",
     "def extract_errors_map(error:dict, error_map:dict):\n",
     "    # print(error)\n",
     "    # if there's errors in subschema treat them since they are the origin of the error  \n",
@@ -68,20 +68,14 @@
     "        keywordLocation = str(error['keywordLocation'])\n",
     "        key = keywordLocation.split('/')[-1]\n",
     "        \n",
-    "        if error[\"valid\"] == True :\n",
-    "            if keywordLocation.__contains__(\"not\"):\n",
-    "                if error_map.get(key) is None : \n",
-    "                    error_map[key]=[error['error'] if 'error' in error else '']\n",
-    "                else : \n",
-    "                    error_map[key].append(error['error'] if 'error' in error else '') \n",
-    "                \n",
-    "            pass \n",
-    "        else :      \n",
-    "            if key and  'error' in error and key not in keywords_to_avoid:\n",
-    "                if error_map.get(key) is None : \n",
-    "                    error_map[key]=[error['error'] if 'error' in error else '']\n",
-    "                else : \n",
-    "                    error_map[key].append(error['error'] if 'error' in error else '')\n",
+    "        # if key not in keywords_to_avoid:\n",
+    "        if error_map.get(key) is None : \n",
+    "            error_map[key]=[error['error'] if 'error' in error else '']\n",
+    "        else : \n",
+    "            error_map[key].append(error['error'] if 'error' in error else '') \n",
+    "        \n",
+    "        # pass \n",
+    "\n",
     "    \n",
     "    # print(\"there's still error\")\n",
     "   \n",
@@ -95,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,8 +338,8 @@
     "def get_errors_validation(schema_dir:str,instance_dir:str): \n",
     "    result = validate_instance(schema_dir,instance_dir)\n",
     "    # print(result.output('detailed'))# if errors in result.output('detailed')\n",
-    "    if(result.output(\"verbose\")['valid']==False or \"errors\" in result.output(\"verbose\")): \n",
-    "        errors = extract_errors(result.output('verbose')['errors'])\n",
+    "    if(result.output(\"detailed\")['valid']==False or \"errors\" in result.output(\"detailed\")): \n",
+    "        errors = extract_errors(result.output('detailed')['errors'])\n",
     "    else : \n",
     "        errors=[]\n",
     "    return errors"
@@ -353,40 +347,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'$schema': 'https://json-schema.org/draft/2019-09/schema', '$id': 'https://raw.githubusercontent.com/AlekseyBuzmakov/FCAPS/master/FCAPS/schemas/graph.json', 'title': 'Directed Graph JSON', 'description': 'Json file gives a description of a directed graph', 'type': 'array', 'prefixItems': [{'type': 'object', 'title': 'General Grap Info', 'description': 'An object contains general info about the graph', 'properties': {'NodesCount': {'title': 'Number of Nodes', 'description': 'The total number of nodes in the graph', 'type': 'integer', 'minimum': 0}, 'ArcsCount': {'title': 'Number of Arcs', 'description': 'The total number of arcs in the graph', 'type': 'integer', 'minimum': 0}}}, {'title': 'Nodes Info', 'description': 'All nodes are enumerated in this object', 'type': 'object', 'properties': {'Nodes': {'title': 'List of Nodes', 'description': 'The nodes of the graph are given within this array', 'type': 'array', 'items': {}}}, 'required': ['Nodes']}, {'title': 'Arcs Info', 'description': 'All arcs are enumerated in this object', 'type': 'object', 'properties': {'Arcs': {'title': 'List of Arcs', 'description': 'The arcs of the graph are given within this array', 'type': 'array', 'items': {'title': 'Graph Arc', 'description': 'A description of an arc of this graph', 'type': 'object', 'properties': {'S': {'title': 'Source Node', 'description': \"The source node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}, 'D': {'title': 'Destination Node', 'description': \"The destination node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}}, 'required': ['S', 'D']}}}, 'required': ['Arcs']}, {'title': 'Visualisation Info', 'description': 'All info that is related to graph visualisation is given here, such as vertices positions or level in concept lattices'}], 'minItems': 3}\n"
+      "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
+      "{'valid': False, 'instanceLocation': '', 'keywordLocation': '', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#', 'errors': [{'instanceLocation': '/something/name', 'keywordLocation': '/properties/something/properties/name/anyOf', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf', 'errors': [{'instanceLocation': '/something/name/a', 'keywordLocation': '/properties/something/properties/name/anyOf/0/properties/a', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf/0/properties/a', 'errors': [{'instanceLocation': '/something/name/a/b', 'keywordLocation': '/properties/something/properties/name/anyOf/0/properties/a/properties/b/type', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf/0/properties/a/properties/b/type', 'error': 'The instance must be of type \"string\"'}, {'instanceLocation': '/something/name/a', 'keywordLocation': '/properties/something/properties/name/anyOf/0/properties/a/minProperties', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf/0/properties/a/minProperties', 'error': 'The object has too few properties (minimum 2)'}]}, {'instanceLocation': '/something/name', 'keywordLocation': '/properties/something/properties/name/anyOf/1/type', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf/1/type', 'error': 'The instance must be of type \"integer\"'}]}]}\n",
+      "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
+      "['type', 'minProperties']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<jschon.jsonschema.Result at 0x23bc09f0880>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "src_file_path = os.path.dirname(os.path.abspath(\"__file__\"))\n",
-    "schema_path = src_file_path+'/dataset/8/schema-migrated.json'\n",
-    "instance_path = src_file_path+'/dataset/8/instance.json'\n",
+    "schema_path = src_file_path+'/dataset/2/schema-migrated.json'\n",
+    "instance_path = src_file_path+'/dataset/2/instance.json'\n",
     "# output = validate_instance(schema_path,instance_path).output('verbose')\n",
     "# with open(src_file_path+'/dataset/8/errors.json','w') as f: \n",
     "#     json.dump(output,f)\n",
-    "validate_instance(schema_path,instance_path)"
+    "result = validate_instance(schema_path,instance_path)\n",
+    "print(result.output(\"detailed\"))\n",
+    "errors = get_errors_validation(schema_path,instance_path)\n",
+    "print(errors)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +434,7 @@
     "    \n",
     "    # print(errors)\n",
     "    with open(f'{dataset_dir}/{dir}/errors.json','w') as f :\n",
-    "        res = result.output(\"verbose\")\n",
+    "        res = result.output(\"detailed\")\n",
     "        res['total_errors'] = errors\n",
     "        json.dump(res,f,indent=2) "
    ]
