played with some stuff

--- a/experiments/validation/Main.ipynb
+++ b/experiments/validation/Main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "Catalog('catalog')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,31 +53,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# keywords_to_avoid = ['not','anyOf','oneOf','allOf','patterns','patternPropreties']\n",
+    "keywords_to_avoid = ['not','anyOf','oneOf','allOf','properties','patternPropreties','items']\n",
     "def extract_errors_map(error:dict, error_map:dict):\n",
     "    # print(error)\n",
     "    # if there's errors in subschema treat them since they are the origin of the error  \n",
+    "    keywordLocation = str(error['keywordLocation'])\n",
+    "    key = keywordLocation.split('/')[-1]\n",
     "    if 'errors' in error:\n",
+    "        if key in  keywords_to_avoid :\n",
+    "            if error_map.get(key) is None : \n",
+    "                error_map[key]=[error['error'] if 'error' in error else '']\n",
+    "            else : \n",
+    "                error_map[key].append(error['error'] if 'error' in error else '') \n",
     "        for e in error['errors']:\n",
     "            extract_errors_map(e, error_map)\n",
     "    else : \n",
-    "        keywordLocation = str(error['keywordLocation'])\n",
-    "        key = keywordLocation.split('/')[-1]\n",
-    "        \n",
     "        # if key not in keywords_to_avoid:\n",
     "        if error_map.get(key) is None : \n",
     "            error_map[key]=[error['error'] if 'error' in error else '']\n",
     "        else : \n",
     "            error_map[key].append(error['error'] if 'error' in error else '') \n",
-    "        \n",
-    "        # pass \n",
-    "\n",
-    "    \n",
-    "    # print(\"there's still error\")\n",
     "   \n",
     "\n",
     "def extract_errors(errors): \n",
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/9 [00:00<?, ?it/s]"
+      "  0%|          | 0/11 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -173,22 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 11%|█         | 1/9 [00:02<00:22,  2.82s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Migrating correctly\n",
-      "Migrating : schema\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 22%|██▏       | 2/9 [00:05<00:18,  2.71s/it]"
+      "  9%|▉         | 1/11 [00:05<00:52,  5.22s/it]"
      ]
     },
     {
@@ -203,7 +187,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 3/9 [00:08<00:16,  2.68s/it]"
+      " 18%|█▊        | 2/11 [00:07<00:32,  3.63s/it]"
      ]
     },
     {
@@ -218,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 44%|████▍     | 4/9 [00:11<00:14,  2.84s/it]"
+      " 27%|██▋       | 3/11 [00:10<00:26,  3.30s/it]"
      ]
     },
     {
@@ -233,7 +217,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 56%|█████▌    | 5/9 [00:13<00:10,  2.61s/it]"
+      " 36%|███▋      | 4/11 [00:13<00:22,  3.23s/it]"
      ]
     },
     {
@@ -248,7 +232,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|██████▋   | 6/9 [00:16<00:08,  2.69s/it]"
+      " 45%|████▌     | 5/11 [00:16<00:18,  3.12s/it]"
      ]
     },
     {
@@ -263,7 +247,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 78%|███████▊  | 7/9 [00:18<00:05,  2.62s/it]"
+      " 55%|█████▍    | 6/11 [00:19<00:14,  2.87s/it]"
      ]
     },
     {
@@ -278,7 +262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 89%|████████▉ | 8/9 [00:21<00:02,  2.62s/it]"
+      " 64%|██████▎   | 7/11 [00:22<00:12,  3.07s/it]"
      ]
     },
     {
@@ -293,7 +277,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:23<00:00,  2.62s/it]"
+      " 73%|███████▎  | 8/11 [00:25<00:09,  3.13s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Migrating correctly\n",
+      "Migrating : schema\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 82%|████████▏ | 9/11 [00:28<00:06,  3.11s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Migrating correctly\n",
+      "Migrating : schema\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 91%|█████████ | 10/11 [00:31<00:02,  2.92s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Migrating correctly\n",
+      "Migrating : schema\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 11/11 [00:33<00:00,  3.06s/it]"
      ]
     },
     {
@@ -317,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,31 +376,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "{'valid': False, 'instanceLocation': '', 'keywordLocation': '', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#', 'errors': [{'instanceLocation': '/something/name', 'keywordLocation': '/properties/something/properties/name/anyOf', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf', 'errors': [{'instanceLocation': '/something/name/a', 'keywordLocation': '/properties/something/properties/name/anyOf/0/properties/a', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf/0/properties/a', 'errors': [{'instanceLocation': '/something/name/a/b', 'keywordLocation': '/properties/something/properties/name/anyOf/0/properties/a/properties/b/type', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf/0/properties/a/properties/b/type', 'error': 'The instance must be of type \"string\"'}, {'instanceLocation': '/something/name/a', 'keywordLocation': '/properties/something/properties/name/anyOf/0/properties/a/minProperties', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf/0/properties/a/minProperties', 'error': 'The object has too few properties (minimum 2)'}]}, {'instanceLocation': '/something/name', 'keywordLocation': '/properties/something/properties/name/anyOf/1/type', 'absoluteKeywordLocation': 'urn:uuid:0aaeab64-03c1-4650-8103-0483a272e971#/properties/something/properties/name/anyOf/1/type', 'error': 'The instance must be of type \"integer\"'}]}]}\n",
-      "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "['type', 'minProperties']\n"
+      "{'additionalProperties': False, 'properties': {'createdAt': {'additionalProperties': False, 'properties': {'since': {'format': 'date-time', 'type': 'string'}, 'until': {'format': 'date-time', 'type': 'string'}}, 'type': 'object'}, 'level': {'additionalProperties': False, 'properties': {'comparison': {'default': 'gte', 'enum': ['eq', 'gt', 'lt', 'gte', 'lte'], 'type': 'string'}, 'value': {'default': 'info', 'enum': ['debug', 'info', 'warn', 'error', 'critical'], 'type': 'string'}}, 'type': 'object'}, 'source': {'additionalProperties': False, 'properties': {'options': {'type': 'string'}, 'pattern': {'type': 'string'}}, 'required': ['pattern'], 'type': 'object'}, 'tags': {'properties': {'match': {'enum': ['all', 'exact', 'any'], 'type': 'string'}, 'value': {'items': {'not': {'const': 'logs'}, 'type': 'string'}, 'type': 'array'}}, 'type': 'object'}, 'time': {'additionalProperties': False, 'properties': {'since': {'format': 'date-time', 'type': 'string'}, 'until': {'format': 'date-time', 'type': 'string'}}, 'type': 'object'}}, 'title': 'EventRequest', 'type': 'object', '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'valid': False,\n",
+       " 'instanceLocation': '',\n",
+       " 'keywordLocation': '',\n",
+       " 'absoluteKeywordLocation': 'urn:uuid:9c74c262-a066-4d56-82e1-d161393cf6a9#',\n",
+       " 'errors': [{'instanceLocation': '/tags/value',\n",
+       "   'keywordLocation': '/properties/tags/properties/value/items',\n",
+       "   'absoluteKeywordLocation': 'urn:uuid:9c74c262-a066-4d56-82e1-d161393cf6a9#/properties/tags/properties/value/items',\n",
+       "   'errors': [{'instanceLocation': '/tags/value/0',\n",
+       "     'keywordLocation': '/properties/tags/properties/value/items/type',\n",
+       "     'absoluteKeywordLocation': 'urn:uuid:9c74c262-a066-4d56-82e1-d161393cf6a9#/properties/tags/properties/value/items/type',\n",
+       "     'error': 'The instance must be of type \"string\"'},\n",
+       "    {'instanceLocation': '/tags/value/1',\n",
+       "     'keywordLocation': '/properties/tags/properties/value/items/type',\n",
+       "     'absoluteKeywordLocation': 'urn:uuid:9c74c262-a066-4d56-82e1-d161393cf6a9#/properties/tags/properties/value/items/type',\n",
+       "     'error': 'The instance must be of type \"string\"'},\n",
+       "    {'instanceLocation': '/tags/value/2',\n",
+       "     'keywordLocation': '/properties/tags/properties/value/items/type',\n",
+       "     'absoluteKeywordLocation': 'urn:uuid:9c74c262-a066-4d56-82e1-d161393cf6a9#/properties/tags/properties/value/items/type',\n",
+       "     'error': 'The instance must be of type \"string\"'}]}]}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "src_file_path = os.path.dirname(os.path.abspath(\"__file__\"))\n",
-    "schema_path = src_file_path+'/dataset/2/schema-migrated.json'\n",
-    "instance_path = src_file_path+'/dataset/2/instance.json'\n",
+    "schema_path = src_file_path+'/dataset/10/schema-migrated.json'\n",
+    "instance_path = src_file_path+'/dataset/10/instance.json'\n",
     "# output = validate_instance(schema_path,instance_path).output('verbose')\n",
     "# with open(src_file_path+'/dataset/8/errors.json','w') as f: \n",
     "#     json.dump(output,f)\n",
     "result = validate_instance(schema_path,instance_path)\n",
-    "print(result.output(\"detailed\"))\n",
-    "errors = get_errors_validation(schema_path,instance_path)\n",
-    "print(errors)"
+    "result.output(\"detailed\")\n",
+    "# errors = get_errors_validation(schema_path,instance_path)\n",
+    "# print(errors)"
    ]
   },
   {
@@ -381,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -391,6 +445,12 @@
       "Treating schema : 1\n",
       "{'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b']}}}, {'type': 'integer'}]}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "{'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b']}}}, {'type': 'integer'}]}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
+      "Treating schema : 10\n",
+      "{'additionalProperties': False, 'properties': {'createdAt': {'additionalProperties': False, 'properties': {'since': {'format': 'date-time', 'type': 'string'}, 'until': {'format': 'date-time', 'type': 'string'}}, 'type': 'object'}, 'level': {'additionalProperties': False, 'properties': {'comparison': {'default': 'gte', 'enum': ['eq', 'gt', 'lt', 'gte', 'lte'], 'type': 'string'}, 'value': {'default': 'info', 'enum': ['debug', 'info', 'warn', 'error', 'critical'], 'type': 'string'}}, 'type': 'object'}, 'source': {'additionalProperties': False, 'properties': {'options': {'type': 'string'}, 'pattern': {'type': 'string'}}, 'required': ['pattern'], 'type': 'object'}, 'tags': {'properties': {'match': {'enum': ['all', 'exact', 'any'], 'type': 'string'}, 'value': {'items': {'not': {'const': 'logs'}, 'type': 'string'}, 'type': 'array'}}, 'type': 'object'}, 'time': {'additionalProperties': False, 'properties': {'since': {'format': 'date-time', 'type': 'string'}, 'until': {'format': 'date-time', 'type': 'string'}}, 'type': 'object'}}, 'title': 'EventRequest', 'type': 'object', '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
+      "{'additionalProperties': False, 'properties': {'createdAt': {'additionalProperties': False, 'properties': {'since': {'format': 'date-time', 'type': 'string'}, 'until': {'format': 'date-time', 'type': 'string'}}, 'type': 'object'}, 'level': {'additionalProperties': False, 'properties': {'comparison': {'default': 'gte', 'enum': ['eq', 'gt', 'lt', 'gte', 'lte'], 'type': 'string'}, 'value': {'default': 'info', 'enum': ['debug', 'info', 'warn', 'error', 'critical'], 'type': 'string'}}, 'type': 'object'}, 'source': {'additionalProperties': False, 'properties': {'options': {'type': 'string'}, 'pattern': {'type': 'string'}}, 'required': ['pattern'], 'type': 'object'}, 'tags': {'properties': {'match': {'enum': ['all', 'exact', 'any'], 'type': 'string'}, 'value': {'items': {'not': {'const': 'logs'}, 'type': 'string'}, 'type': 'array'}}, 'type': 'object'}, 'time': {'additionalProperties': False, 'properties': {'since': {'format': 'date-time', 'type': 'string'}, 'until': {'format': 'date-time', 'type': 'string'}}, 'type': 'object'}}, 'title': 'EventRequest', 'type': 'object', '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
+      "Treating schema : 11\n",
+      "{'description': 'A valid MongoDB sort: https://docs.mongodb.com/manual/reference/method/cursor.sort/', 'items': {'description': 'A tuple defining the property to sort on and the direction', 'prefixItems': [{'type': 'string'}, {'enum': ['asc', 'desc'], 'type': 'string'}], 'items': False, 'minItems': 2, 'type': 'array'}, 'title': 'DatabaseSort', 'type': 'array', '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
+      "{'description': 'A valid MongoDB sort: https://docs.mongodb.com/manual/reference/method/cursor.sort/', 'items': {'description': 'A tuple defining the property to sort on and the direction', 'prefixItems': [{'type': 'string'}, {'enum': ['asc', 'desc'], 'type': 'string'}], 'items': False, 'minItems': 2, 'type': 'array'}, 'title': 'DatabaseSort', 'type': 'array', '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 2\n",
       "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
