--- a/main/Experimentation.ipynb
+++ b/main/Experimentation.ipynb
@@ -375,7 +375,10 @@
     "    \n",
     "    # print(\"there's still error\")\n",
     "   \n",
-    "keywords_to_avoid = ['not','anyOf','oneOf','allOf','properties','patternPropreties','items']\n",
+    "keywords_to_avoid = [\n",
+    "    'not','anyOf','oneOf','allOf','properties','patternPropreties','items',\n",
+    "    'additionalProperties','contains','unevaluatedProperties','prefixItems', 'unevaluatedItems'\n",
+    "]\n",
     "def extract_errors_map(error:dict, error_map:dict):\n",
     "    # print(error)\n",
     "    # if there's errors in subschema treat them since they are the origin of the error  \n",
