--- a/experiments/validation/Main.ipynb
+++ b/experiments/validation/Main.ipynb
@@ -57,7 +57,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keywords_to_avoid = ['not','anyOf','oneOf','allOf','properties','patternPropreties','items']\n",
+    "keywords_to_avoid = [\n",
+    "    'not','anyOf','oneOf','allOf','properties','patternPropreties','items',\n",
+    "    'additionalProperties','contains','unevaluatedProperties','prefixItems', 'unevaluatedItems'\n",
+    "]\n",
     "def extract_errors_map(error:dict, error_map:dict):\n",
     "    # print(error)\n",
     "    # if there's errors in subschema treat them since they are the origin of the error  \n",
