added some examples

--- a/experiments/repair/Main.ipynb
+++ b/experiments/repair/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,70 +13,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_catalog('2019-09')"
+    "from Validator import Validator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_instance(schema_dir:str,instance_dir): \n",
-    "    with open(schema_dir,'r',encoding='utf-8') as f : \n",
-    "        schema= json.load(f)\n",
-    "    print(schema)\n",
-    "    demo_schema = JSONSchema(schema)\n",
-    "    # print(demo_schema)\n",
-    "    with open (instance_dir,'r',encoding='utf-8') as f : \n",
-    "        instance=json.load(f)\n",
-    "        \n",
-    "    result = demo_schema.evaluate(\n",
-    "        JSON(instance)\n",
-    "    )\n",
-    "    return result \n",
-    "def get_errors_validation(schema_dir:str,instance_dir:str): \n",
-    "    result = validate_instance(schema_dir,instance_dir)\n",
-    "    # print(result.output('detailed'))# if errors in result.output('detailed')\n",
-    "    if(result.output(\"detailed\")['valid']==False or \"errors\" in result.output(\"detailed\")): \n",
-    "        errors = extract_errors(result.output('detailed')['errors'])\n",
-    "    else : \n",
-    "        errors=[]\n",
-    "    return errors"
+    "validator = Validator()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treating Type : boolean\n",
+      "\t schema : 1\n",
+      "\t schema : 2\n",
+      "Treating Type : null\n",
+      "\t schema : 1\n",
+      "\t schema : 2\n"
+     ]
+    }
+   ],
    "source": [
     "dataset_dir= './Samples'\n",
     "for dir in os.listdir(dataset_dir) : \n",
     "    \n",
+    "    print(f\"Treating Type : {dir}\")\n",
     "    for instance in os.listdir(f'{dataset_dir}/{dir}') : \n",
-    "        print(f\"Treating schema : {dir}\")\n",
+    "        print(f\"\\t schema : {instance}\")\n",
     "        schema_dir = f'{dataset_dir}/{dir}/{instance}/schema.json'\n",
     "        instance_dir=f'{dataset_dir}/{dir}/{instance}/instance.json'\n",
-    "        result=validate_instance(schema_dir,instance_dir)\n",
-    "        errors=get_errors_validation(schema_dir,instance_dir)\n",
+    "        result=validator.validate_instance(schema_dir,instance_dir)\n",
+    "        errors=validator.get_errors_validation(schema_dir,instance_dir)\n",
     "    \n",
-    "    # print(errors)\n",
-    "    with open(f'{dataset_dir}/{dir}/errors.json','w') as f :\n",
-    "        res = result.output(\"detailed\")\n",
-    "        res['total_errors'] = errors\n",
-    "        json.dump(res,f,indent=2) "
+    "        # print(errors)\n",
+    "        with open(f'{dataset_dir}/{dir}/{instance}/errors.json','w') as f :\n",
+    "            res = result.output(\"detailed\")\n",
+    "            res['total_errors'] = errors\n",
+    "            json.dump(res,f,indent=2) "
    ]
   }
  ],
