added some stuff

--- a/experiments/repair/Main.ipynb
+++ b/experiments/repair/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,11 @@
       "\t schema : 2\n",
       "Treating Type : null\n",
       "\t schema : 1\n",
-      "\t schema : 2\n"
+      "\t schema : 2\n",
+      "Treating Type : number\n",
+      "\t schema : 1\n",
+      "\t schema : 2\n",
+      "\t schema : 3\n"
      ]
     }
    ],
@@ -58,13 +62,19 @@
     "        instance_dir=f'{dataset_dir}/{dir}/{instance}/instance.json'\n",
     "        result=validator.validate_instance(schema_dir,instance_dir)\n",
     "        errors=validator.get_errors_validation(schema_dir,instance_dir)\n",
-    "    \n",
     "        # print(errors)\n",
     "        with open(f'{dataset_dir}/{dir}/{instance}/errors.json','w') as f :\n",
     "            res = result.output(\"detailed\")\n",
     "            res['total_errors'] = errors\n",
     "            json.dump(res,f,indent=2) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
