--- a/experiments/repair/Main.ipynb
+++ b/experiments/repair/Main.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,10 @@
       "Treating Type : number\n",
       "\t schema : 1\n",
       "\t schema : 2\n",
-      "\t schema : 3\n"
+      "\t schema : 3\n",
+      "Treating Type : string\n",
+      "\t schema : 1\n",
+      "\t schema : 2\n"
      ]
     }
    ],
