added examples of anyOf

--- a/experiments/repair/Main.ipynb
+++ b/experiments/repair/Main.ipynb
@@ -31,13 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Treating Type : anyOf\n",
+      "\t schema : 1\n",
       "Treating Type : boolean\n",
       "\t schema : 1\n",
       "\t schema : 2\n",
@@ -48,6 +50,8 @@
       "\t schema : 1\n",
       "\t schema : 2\n",
       "\t schema : 3\n",
+      "Treating Type : object\n",
+      "\t schema : 1\n",
       "Treating Type : string\n",
       "\t schema : 1\n",
       "\t schema : 2\n"
