added validation error + examples

--- a/experiments/repair/Main.ipynb
+++ b/experiments/repair/Main.ipynb
@@ -31,7 +31,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "JSONSchema({'$schema': 'https://json-schema.org/draft/2019-09/schema', 'anyOf': [{'type': 'number', 'multipleOf': 3, 'minimum': 100}, {'type': 'object', 'required': ['name'], 'properties': {'name': {'type': 'string'}, 'email': {'description': 'Email of the user', 'type': 'string', 'format': 'email'}}}]})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validator.validate_instance('./Samples/anyOf/1/schema.json','./Samples/anyOf/1/instance.json').schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
