added some stuff

--- a/main/repair/Main.ipynb
+++ b/main/repair/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +149,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Setup examples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -237,6 +244,13 @@
     "    with open(f'./Samples/{i+1}/all-errors.json','w') as f : \n",
     "        json.dump(errors,f,indent=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
