--- a/experiments/validation/Main.ipynb
+++ b/experiments/validation/Main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "Catalog('catalog')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -455,8 +455,8 @@
       "{'description': 'A valid MongoDB sort: https://docs.mongodb.com/manual/reference/method/cursor.sort/', 'items': {'description': 'A tuple defining the property to sort on and the direction', 'prefixItems': [{'type': 'string'}, {'enum': ['asc', 'desc'], 'type': 'string'}], 'items': False, 'minItems': 2, 'type': 'array'}, 'title': 'DatabaseSort', 'type': 'array', '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "{'description': 'A valid MongoDB sort: https://docs.mongodb.com/manual/reference/method/cursor.sort/', 'items': {'description': 'A tuple defining the property to sort on and the direction', 'prefixItems': [{'type': 'string'}, {'enum': ['asc', 'desc'], 'type': 'string'}], 'items': False, 'minItems': 2, 'type': 'array'}, 'title': 'DatabaseSort', 'type': 'array', '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 2\n",
-      "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
+      "{'required': ['person'], 'properties': {'person': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'required': ['first'], 'properties': {'first': {'type': 'object', 'properties': {'surname': {'type': 'string'}}, 'required': ['surname'], 'minProperties': 2}}}, {'type': 'string'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
+      "{'required': ['person'], 'properties': {'person': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'required': ['first'], 'properties': {'first': {'type': 'object', 'properties': {'surname': {'type': 'string'}}, 'required': ['surname'], 'minProperties': 2}}}, {'type': 'string'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 3\n",
       "{'type': 'object', 'properties': {'name': {'type': 'string'}}, 'not': {'required': ['name']}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "{'type': 'object', 'properties': {'name': {'type': 'string'}}, 'not': {'required': ['name']}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
