--- a/main/Stats.ipynb
+++ b/main/Stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
        "4                 []  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,6 +1156,40 @@
     "    plt.xticks(rotation=45, ha=\"right\")  # Rotation des labels pour meilleure lisibilité\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fonction pour créer un graphique à barres\n",
+    "errors = {\n",
+    "    \"DG\":{},\n",
+    "    \"JE\":{},\n",
+    "    \"JSF\":{},\n",
+    "}\n",
+    "\n",
+    "# Parcours des générateurs\n",
+    "for generator in generators:\n",
+    "    # Parcours des erreurs\n",
+    "    for errors_witness in df[f\"{generator}_type_of_errors\"]:\n",
+    "        # Comptage des erreurs\n",
+    "        for error in errors_witness : \n",
+    "            errors[generator][error] = errors[generator].get(error, 0) + 1\n",
+    "# Fonction pour calculer les pourcentages d'occurrence des erreurs et sauvegarder dans un fichier CSV\n",
+    "def save_error_percentage(generator, error_counts):\n",
+    "    total_errors = sum(error_counts.values())\n",
+    "    sorted_errors = sorted(error_counts.items(), key=lambda x: x[1], reverse=True)\n",
+    "    error_percentages = {error: count/total_errors * 100 for error, count in sorted_errors}\n",
+    "    df = pd.DataFrame(error_percentages.items(), columns=['error', 'percentage'])\n",
+    "    df.to_csv(f\"./results/{generator}_error_percentage.csv\", index=False)\n",
+    "\n",
+    "\n",
+    "# Calcul des pourcentages d'occurrence des erreurs pour chaque générateur et sauvegarde dans des fichiers CSV\n",
+    "for generator, error_counts in errors.items():\n",
+    "    save_error_percentage(generator, error_counts)"
    ]
   },
   {
